# probmetrics

./: README.md  pyproject.toml
.github/workflows/: testing.yml
probmetrics/: __about__.py  metrics.py  utils.py
probmetrics/calibrators/: __init__.py  base.py  binning.py  factory.py  logistic.py  nonparametric.py  orderpreserving.py  sklearn.py  splines.py  temperature_scaling.py  trees.py
tests/: test_calibrators.py
